--- a/figuras.html
+++ b/figuras.html
@@ -7,7 +7,52 @@
     <title>Figuras geométricas | Curso Práctico de Javascript en Platzi</title>
 </head>
 <body>
-    <h1>Figuras Geométricas</h1>
+    <header>
+        <h1>Figuras Geométricas</h1>
+        <p>Este es el primer taller del curso práctico de Javascript</p>
+    </header>
+
+    <section>
+        <h2>Calcula el área y perímetro de un cuadrado</h2>
+        <form action="">
+            <label for="inputCuadrado">¿Cuánto mide cada lado de tu cuadrado?: </label>
+            <input type="number" id="inputCuadrado">
+            <button type="button" onclick="calcularPerimetroCuadrado()">Calcular el perímetro</button>
+            <button type="button" onclick="calcularAreaCuadrado()">Calcular el área</button>
+        </form>
+    </section>
+
+    <section>
+        <h2>Calcula el área y perímetro de un triángulo</h2>
+        <form action="">
+            <label for="lado1">Digita el valor del lado 1: </label>
+            <input type="number" id="lado1">
+
+            <label for="lado2">Digita el valor del lado 2: </label>
+            <input type="number" id="lado2">
+
+            <label for="lado3">Digita el valor de la base del triángulo: </label>
+            <input type="number" id="lado3">
+
+            <label for="alturaTriangulo">Digita el valor de la altura del triángulo: </label>
+            <input type="number" id="alturaTriangulo">
+
+            <button type="button" onclick="calcularPerimetroTriangulo()">Calcular el perímetro</button>
+            <button type="button" onclick="calcularAreaTriangulo()">Calcular el área</button>
+        </form>
+    </section>
+
+    <section>
+        <h2>Calcula el área, diametro y perímetro de un círculo</h2>
+        <form action="">
+            <label for="radio">Digita el valor del radio: </label>
+            <input type="number" id="radio">
+
+            <button type="button" onclick="calcularDiametroCirculo()">Calcular el diametro</button>
+            <button type="button" onclick="calcularAreacirculo()">Calcular el área</button>
+            <button type="button" onclick="calcularPerimetroCirculo()">Calcular el perímetro</button>
+        </form>
+    </section>
 
     <script src="./figuras.js"></script>
 </body>
