Modificación del archivo README. Versión del taller de descuento v1.0

--- a/descuentos.html
+++ b/descuentos.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Porcentajes y descuentos</h1>
-        <p>Este es el segundo taller del curso práctico de JavaScript</p>
+        <p>Este es el segundo taller del Curso Práctico de JavaScript</p>
     </header>
 
     <section>
@@ -17,12 +17,12 @@
 
         <form action="">
             <label for="inputPrice">Escribe el precio de tu producto:</label>
-            <input type="number" id="inputPrice">
+            <input type="number" name="inputPrice" id="inputPrice">
 
             <label for="inputDiscount">Escribe el descuento de tu producto:</label>
-            <input type="number" id="inputDiscount">
+            <input type="number" name="inputDiscount" id="inputDiscount">
 
-            <button type="button" onclick="buttonPriceDiscount()">Calcular el precio con descuento</button>
+            <button type="button" onclick="buttonPriceDiscount()">Calcular precio con descuento</button>
 
             <p id="resultPrice"></p>
         </form>
