--- a/descuentos.html
+++ b/descuentos.html
@@ -19,8 +19,11 @@
             <label for="inputPrice">Escribe el precio de tu producto:</label>
             <input type="number" name="inputPrice" id="inputPrice">
 
-            <label for="inputDiscount">Escribe el descuento de tu producto:</label>
-            <input type="number" name="inputDiscount" id="inputDiscount">
+            <!-- <label for="inputDiscount">Escribe el descuento de tu producto:</label>
+            <input type="number" name="inputDiscount" id="inputDiscount"> -->
+
+            <label for="inputCoupon">Escribe el cupón de descuento:</label>
+            <input type="text" name="inputCoupon" id="inputCoupon">
 
             <button type="button" onclick="buttonPriceDiscount()">Calcular precio con descuento</button>
 
